# arxiv_topic_classifier

./: .gitignore  ML2_nlp_ops.ipynb  README.md  pyproject.toml
app/bot/: bot.py
app/bot/dialogs/start/: dialogs.py  getters.py  handlers.py
app/bot/handlers/: commands.py  errors.py
app/bot/states/: start.py
app/gradio_web/: main.py
app/infrastructure/storage/storage/: nats_storage.py
app/mlmodel/: worker_model.py
app/services/classifier/: publisher.py
arxiv_meta_parser/: get_meta.py  parser.py
config/: settings.toml
locales/en/LC_MESSAGES/: txt.ftl
locales/ru/LC_MESSAGES/: txt.ftl
